Fixed horizontal scroll css bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -16,6 +16,7 @@
  */
 body {
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 h1,
@@ -71,7 +72,8 @@ p a:hover {
 }
 
 .container-full {
-  margin: 0 auto;
+  margin-right: auto;
+  margin-left: auto;
   width: 100%;
   color: white;
 }
